- to address an issue with the invisible modal trapping keys - format scss

--- a/ui/client-react/src/components/qbModal/invisibleBackdrop.scss
+++ b/ui/client-react/src/components/qbModal/invisibleBackdrop.scss
@@ -1,22 +1,20 @@
 @import '../../assets/css/_qbVariables';
 
-  .invisibleBackdropModal-backdrop.in {
+.invisibleBackdropModal-backdrop.in {
     opacity: 0.17;
     background-color: $input-bg-color;
-  }
+}
 
-  .invisibleBackdropModal-backdrop,
-  .invisibleBackdropModal-dialog,
-  .invisibleLink {
+.invisibleBackdropModal-backdrop, .invisibleBackdropModal-dialog, .invisibleLink {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: $zindex-modal-background;
-  }
+}
 
-  .invisibleLink {
+.invisibleLink {
     cursor: wait;
-    color:$input-bg-color
-  }
+    color: $input-bg-color;
+}
